@@ -104,10 +104,10 @@ static NSString *commaSeparator = nil;
 
   string = [self stringByReplacingString: @"\\"
                  withString: @"\\\\"];
-  string = [string stringByReplacingString: @","
-                   withString: @"\\,"];
-//   string = [string stringByReplacingString: @":"
-//                    withString: @"\\:"];
+  //  string = [string stringByReplacingString: @","
+  //                withString: @"\\,"];
+  //  string = [string stringByReplacingString: @":"
+  //                withString: @"\\:"];
   string = [string stringByReplacingString: @";"
                    withString: @"\\;"];
   string = [string stringByReplacingString: @"\n"
